[package]

name = "slog-envlogger"
version = "2.1.0"
authors = ["The Rust Project Developers", "Dawid Ciężarkiewicz <dpc@dpc.pw>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/slog-envlogger"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/envlogger"
description = """
Port of de facto standard logger implementation for Rust, to `slog-rs` framework.
"""

[lib]
path = "src/lib.rs"

[dependencies]
slog = "2.2"
regex = { version = "0.2", optional = true }
slog-term = "2"
slog-stdlog = "3.0.3-pre"
slog-scope = "4"
slog-async = "2"
log = { version = "0.4.2", features = ["std"] }

[dev-dependencies]
slog-async = "2"

[[test]]
name = "regexp_filter"
harness = false

[features]
default = ["regex"]

[patch.crates-io]
slog = { git = "https://github.com/jacekchmiel/slog", branch = "log-0.4-support" }
slog-async = { git = "https://github.com/jacekchmiel/slog-async", branch = "log-0.4-support" }
slog-stdlog = { git = "https://github.com/jacekchmiel/slog-stdlog", branch = "log-0.4-support" }
