[package]

name = "slog-envlogger"
version = "2.2.0"
edition = "2018"
authors = ["The Rust Project Developers", "Dawid Ciężarkiewicz <dpc@dpc.pw>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/slog-envlogger"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/envlogger"
description = """
Port of de facto standard logger implementation for Rust, to `slog-rs` framework.
"""

[lib]
path = "src/lib.rs"

[dependencies]
slog = "2"
regex = { version = "1.2", optional = true }
slog-term = { version = "2", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-scope = { version = "4", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
slog-async = "2"

[[test]]
name = "regexp_filter"
harness = false

[features]
init = ["slog-term", "slog-stdlog", "slog-scope", "log"]
default = ["regex", "init"]
